--- a/resources/ChangeLog.txt
+++ b/resources/ChangeLog.txt
@@ -1,5 +1,9 @@
+2013-04-26  Elie Zananiri
+      * version 0.5.1
+      * updated wiki links 
+
 2013-02-26  Elie Zananiri
-      * version 0.4.9
+      * version 0.5.0
       * updated zip script to use the correct folder structure
       
 2012-10-05  Elie Zananiri
